<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="main_menu"
        android:enabled="true"
        android:icon=""
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/compose_disabled_message1" >

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.colorlearner"
            android:targetClass="com.example.colorlearner.MainActivity                                                              " />

        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>

</shortcuts>